data/derived/fa15/progs/unify/prog2106.ml.out
Characters 13-14:
  let _ = dupe 3 3;;
               ^
Error: This expression has type int but an expression was expected of type
         'a -> 'b
